# rbar

./: Cargo.toml  README.md
src/: main.rs
src/libbar/: bar.rs  lib.rs  message.rs  module.rs  util.rs
src/modules/: battery.rs  clock.rs  load.rs  mod.rs
