[package]
name = "rbar"
version = "0.1.0"
authors = ["William Dussault <dalloriam@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "libbar"
path = "src/libbar/lib.rs"

[[bin]]
name = "rbar"
path = "src/main.rs"

[dependencies]
chrono = "0.4.11"
rood = "0.1.3"
serde = {version = "1.0.104", features = ["derive"]}
serde_json = "1.0.46"
